Refactor: 일기 작성 시간 조회 API 리팩토링